# qtsensor-input

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  accelerometer.cpp  accelerometer.h  brightness.cpp  brightness.h  light.cpp  light.h  main.cpp  manager.cpp  manager.h  sensor-daemon.service  utils.cpp  utils.h
debian/: README  changelog  control  copyright  qtsensor-input.install  sensor-daemon.dirs  sensor-daemon.install
plugin/: 62-sensor-premissions.rules  CMakeLists.txt  input_accelerometer.cpp  input_accelerometer.h  input_lightlevel.cpp  input_lightlevel.h  main.cpp  plugin.json  utils.cpp  utils.h
